<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grid_mapping</name>
  <version>0.1.0</version>
  <description>
    Occupancy grid mapping with known poses for ROS 2 Humble.
    Implements the log-odds occupancy grid mapping algorithm with an
    inverse sensor model and Bresenham ray tracing, as introduced in
    Probabilistic Robotics (Thrun et al., Chapter 9).
    Subscribes to /scan and /odom, publishes /grid_map as OccupancyGrid.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
